@@ -1,3 +1,6 @@
+	* Modified the quota management to offer better bandwidth balancing
+	  between peers.
+	* added XCode project files (maintained by Gregor Riepl)
 	* logging now supports multiple sessions (different sessions now log
 	  to different directories).
 	* fixed random number generator seed problem, generating the same
